--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="notiication"></div>
      <div class="weather-container">
         <div class="weather-icon">
-<img src="2682844_cloud_day_precipitation_rain_snow_icon.png" alt="weather-icon">
+<img src="" alt="weather-icon">
     </div>
     <div class="temperature-value"></div>
 <p>-<span>C</span></p>
