--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="notiication"></div>
      <div class="weather-container">
         <div class="weather-icon">
-<img src="" alt="weather-icon">
+<img src="" alt="">
     </div>
     <div class="temperature-value"></div>
-<p>-<span>C</span></p>
+<p>-</p>
 </div>
 <div class="temperature-description">
-    <p>-</p>
+    <p>-<span style='font-size:100px;'>&#8451</span></p>
 </div>
 <div class="location">
     <p> - </p>
