--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="notiication"></div>
      <div class="weather-container">
         <div class="weather-icon">
-<img src="" alt="">
+<img src="O9S1SH0.jpg" width="25px" height="50px" alt="">
     </div>
     <div class="temperature-value"></div>
 <p>-</p>
