--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <div class="container">
     <div class="app-title">
-        <p>Weather</p>
+        <p>Weather App</p>
     </div>
-    <div class="notiication"></div>
+    <div class="notification"></div>
      <div class="weather-container">
         <div class="weather-icon">
 <img src="O9S1SH0.jpg" width="25px" height="50px" alt="">
