--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="notification"></div>
   <div class="weather-container">
     <div class="weather-icon">
-    <img src="O9S1SH0.jpg" width="25px" height="50px" alt="">
+    <img src="weather app icon _ Blue wallpaper iphone, Iphone….jpeg" width="25px" height="50px" alt="">
   </div>
  <div class="temperature-value"></div>
    <p>-</p>
@@ -26,11 +26,6 @@
 <div class="location">
     <p> - </p>
 </div>
-
-
-
-
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
